     * Option to add Annex A firmware into image
     * Fix flashing of firmwares > 8 MB over webinterface
     * AVM Plugins can be reintegrated into firmware
    * Add volume counter (7240, 7270)
    * Fix wrong usb mounts status message in AVM webinterface (7170, 7270)
    * Add new status bar design (optional)
    * Add support for multiple printers
    * split tr069-remove-patches 

- New packages, libs, modules:
    * aiccu 20070115
    * cpmaccfg-cgi 1.0: Webinterface for cpmaccfg
    * digitemp 3.6.0
    * flex (libflex) 2.5.35
    * fortune 1.2
    * gw6 5.1
    * hplip 2.8.12
    * hp-utils 0.3.2
    * iptraf 3.0.0
    * iputils s20071127
    * libfreetz 0.1
    * libsynce 0.10.0
    * lighttpd 1.4.23
    * mdev 0.6.2: First try to replace AVM's hotplug chain
      depends on 7170, 7240 and 7270.
    * ndas-1.1-22
    * nfs-utils 1.2.0
    * ngircd 14.1
    * nmap 4.68
    * onlinechanged-cgi 0.1
    * owfs 2.7p7
    * pcre 7.9
    * popt 1.15
    * radvd 1.4
    * rsync 3.0.6
    * ruby-fcgi 0.8.7
    * ser2net 2.5
    * slurm 0.3.3
    * sqlite 3.6.16
    * synce-dccm 0.9.1
    * synce-serial 0.10.0
    * tcpproxy 2.0.0-beta15
    * transmission-cgi 0.0.1

- Updated tools and hooks:

- Updated patches:
    * add reiserfs to automountable filesystems
    * change nice names for USB devices (sdax > uStor0x, sdby > uStor1y, ...) 

- Updated packages and libs:
    * bash 3.2.48
    * bftpd 2.3
    * bip 0.8.1
    * callmonitor 1.14
    * cryptsetup 1.0.6
    * curl 7.19.5
    * cyassl 1.0.3
    * dnsmasq 2.49
    * dtmfbox 0.5.0
    * e2fsprogs 1.41.3
    * eSpeak 1.40.02
    * glib 2.18.2
    * haserl 0.9.25
    * iodine 0.5.2
    * libevent 1.4.11
    * libpopt 1.14
    * linux-atm 2.5.0
    * lsof 4.81
    * ltrace 0.5 svn 81
    * mcabber 0.9.9
    * microperl 5.10.0
    * ntfs-3g 2009.4.4
    * openssh 5.2p1
    * openssl 0.9.8k
    * openvpn 2.1_rc18
    * php 5.2.10
    * pingtunnel 0.70
    * pjproject 1.0.1
    * pptp 1.7.2
    * privoxy 3.0.12