@@ -38,5 +38,7 @@ files
 	usr/mww/cgi-bin/settings.cgi
 	usr/mww/cgi-bin/status.cgi
 	usr/lib/cgi-bin/mod/mounted.cgi
+	usr/lib/cgi-bin/mod/infos.cgi
 	etc/init.d/rc.mod
 }
+
