@@ -40,6 +40,7 @@ Latest changes:
     * Add new status bar design (optional)
     * Add support for multiple printers
     * split tr069-remove-patches 
+    * add additional image-infopage and .config in firmware image (by herman72pb)
 
 - New packages, libs, modules:
     * aiccu 20070115
